glx/testdata/invalid/duplicate-ids/persons/person-duplicate.glx
persons:
  person-abc123:
    properties:
      name:
        value: "Duplicate Person"
        fields:
          given: "Duplicate"
          surname: "Person"
